2008-03-11  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* configure.ac (ads_PERL_MODULE): make Hash::Util Perl module
	  optional at configure time. This was an uncommitted change from
	  related work done on 2008-03-04.

2008-03-06  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/perl/bin/bedrock-create-site.in
	(maybe_create_apache_site_config_file_or_die): Alias /Bedrock/img
	  to the installed bedrock ${htdocsdir}/img directory instead to
	  the ${site_dir}/htdocs/img directory
	(maybe_create_apache_site_config_file_or_die): Fixed handling of
	  overwrite permissions; was sometimes writing an empty file, plus
	  other issues.
	(--apache-auth-realm=STRING): new name for the
	  --apache-auth-db-prompt=STRING option; the old name has been
	  removed. The new default value is "UNCONFIGURED". Man page POD
	  and '-h' help message have been updated to reflect these
	  changes.
	(maybe_copy_dist_bedrock_dot_cgi_or_die): ensure that newly copied
	  file is readable and executable by its user and group; previously
	  were only ensuring this for "other".

	Changes to allow the user to specify user and group ownership of
	/most/ created files:
	* src/main/perl/bin/bedrock-create-site.in:
	(--owner=OWNER): new command line opt
	(--group=GROUP): new command line opt
	($TO_OWNER_NAME): new global var
	($TO_GROUP_NAME): new global var
	(__poor_mans_touch): new function, like touch(1) for Perl
	(__chown_chgrp_all): new function, enhanced wrapper for Perl's
	  'chown' function
	(__create_directories_or_die): now returns list of directories
	  actually created
	(__maybe_create_site_subdirs_or_die): likewise
	(__maybe_create_site_directory_or_die): now returns a boolean
	  indicating whether or not the site directory needed to be created
	(maybe_create_site_directory_tree_or_die): Now changes user and
	  group ownershipt of all newly created directories
	(__maybe_create_named_file_or_die): now returns a boolean