@@ -1,5 +1,8 @@
 2008-03-11  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
+	* autotools/ads_PERL_MODULE.m4: Redirect Perl's stderr to
+	  /dev/null when testing for an OPTIONAL module
+
 	* configure.ac (ads_PERL_MODULE): make Hash::Util Perl module
 	  optional at configure time. This was an uncommitted change from
 	  related work done on 2008-03-04.
